<resources>
    <string name="app_name">Fongbe</string>
    <string name="recommander">Recommander</string>
    <string name="partager_sur_les_r_seaux_sociaux">Partager sur les réseaux sociaux</string>
    <string name="par">Partager par sms</string>
    <string name="adrmail">Adresse: 03BP743 Cotonou, Bénin \n  Email: 2si.langues@gmail.com</string>
    <string name="smsShareText">Entrer le numéro de télephone</string>
    <string name="alphabet">Alphabet</string>
    <string name="w_kw_n_fon_gb_min_ton">Wèkwín fon gbè min ton</string>
    <string name="chiffres">Chiffres</string>
    <string name="nun_lin_l_n">Nun lin lɛn</string>
    <string name="aliments">Aliments</string>
    <string name="n">Nù ɖù ɖù</string>
    <string name="a_comme_dans_tracas">a comme dans tracas</string>
    <string name="a">a</string>
    <string name="voyelles">Voyelles</string>
    <string name="word_picture">wordpic</string>
    <string name="agonk">Agonkɛ</string>
    <string name="ayikun">Ayikun</string>
    <string name="azin">Azin</string>
    <string name="dekin">Dekin</string>
    <string name="dot">Dotɛ</string>
    <string name="f_vi">Févi</string>
    <string name="f_nny">Fɛnnyɛ</string>
    <string name="gbade">Gbade</string>
    <string name="gingembre">Gingembre</string>
    <string name="haricot">Haricot</string>
    <string name="igname">Igname</string>
    <string name="manioc">Manioc</string>
    <string name="ma_s">Maïs</string>
    <string name="noix_de_coco">Noix de Coco</string>
    <string name="noix_de_palme">Noix de Palme</string>
    <string name="noix_palme">Noix de Palme</string>
    <string name="oeuf">Oeuf</string>
    <string name="piment">Piment</string>
    <string name="takin">Takin</string>
    <string name="t_vi">Tévi</string>
    <string name="v">Vɔ</string>
    <string name="z_ro">Zéro</string>
    <string name="_0_v">0- Vɔ</string>
    <string name="_1">1- ɖe</string>
    <string name="un">Un</string>
    <string name="_2_we">2 - We</string>
    <string name="deux">Deux</string>
    <string name="vingt_six">Vingt-six</string>
    <string name="kl">Klé</string>
    <string name="am_g">Amăgà</string>
    <string name="as_n">Asɔ́n</string>
    <string name="ou">OU</string>
</resources>
    <!-- Marie-Parisius Dorian HOUESSOU -->